@@ -1,3 +1,9 @@
+2010-07-07  Joel Brobecker  <brobecker@adacore.com>
+
+	* server.c (handle_v_cont): Call mourn_inferior if process
+	just exited.
+	(myresume): Likewise.
+
 2010-07-01  Pedro Alves  <pedro@codesourcery.com>
 
 	Static tracepoints, and integration with UST.
